# UnrealClaudeMCP

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
UnrealClaudeMCP/: UnrealClaudeMCP.uplugin
UnrealClaudeMCP/Resources/: mcp_manifest.json
UnrealClaudeMCP/Source/UnrealClaudeMCP/: UnrealClaudeMCP.Build.cs
UnrealClaudeMCP/Source/UnrealClaudeMCP/Private/: UnrealClaudeMCPModule.cpp
UnrealClaudeMCP/Source/UnrealClaudeMCP/Private/MCP/: ActorIdentity.cpp  ActorIdentity.h  EventBus.cpp  EventBus.h  LogCapture.cpp  LogCapture.h  MCPDispatcher.cpp  MCPHandler.cpp  MCPServer.cpp  PropertyCoercion.cpp  PropertyCoercion.h  TaskRegistry.cpp  TaskRegistry.h
UnrealClaudeMCP/Source/UnrealClaudeMCP/Private/MCP/Handlers/: AssetPathUtil.h  Handler_AddComponent.cpp  Handler_ApplyPythonToSelection.cpp  Handler_BindActorToSequence.cpp  Handler_CancelTask.cpp  Handler_CompileBlueprint.cpp  Handler_ConfigureTexture.cpp  Handler_CreateMaterialInstance.cpp  Handler_CreateSequence.cpp  Handler_DeleteActor.cpp  Handler_DeleteAsset.cpp  Handler_DuplicateAsset.cpp  Handler_EditWidgetTree.cpp  (+60 more)
UnrealClaudeMCP/Source/UnrealClaudeMCP/Public/: UnrealClaudeMCPModule.h
UnrealClaudeMCP/Source/UnrealClaudeMCP/Public/MCP/: MCPDispatcher.h  MCPHandler.h  MCPServer.h
bridge/: unreal_claude_mcp_bridge.py
docs/: ARCHITECTURE.md  HANDOFF-2026-05-14-afk-pickup.md  HANDOFF-2026-05-14-afk-return.md  HANDOFF-archive.md  HANDOFF-resume-2026-05-14.md  HANDOFF.md  INSTALLATION.md  LANGUAGE-CHOICE-RETROSPECTIVE.md  PR-BODY-scene-v7-marketplace.md  RESTART-RECOVERY.md  RESUME.md  SESSION-CONTINUITY.md  TOOLS.md
docs/design/: marketplace-tools-design.md
docs/session-memory-archive/: MEMORY.md  README.md  codex-collaboration-model.md  feedback_codex_invocation_settings.md  feedback_multi_agent_workflow.md  feedback_vendor_neutral_mcp.md  pr-46-language-shim-in-flight.md  reference_codex_dotnet_ubt_crash.md  reference_codex_usage_limits.md
docs/superpowers/plans/: 2026-05-08-texture-pipeline.md  2026-05-08-v0.3.0-build-a-level.md  2026-05-08-v0.4.0-advanced-property-types.md  2026-05-08-v0.7.0-asset-registry.md  2026-05-08-v0.8.0-sequencer.md  2026-05-10-on-pause-blueprint-suggestions.md
docs/superpowers/specs/: 2026-05-08-texture-pipeline-design.md  2026-05-08-v0.3.0-build-a-level-design.md  2026-05-08-v0.4.0-advanced-property-types-design.md  2026-05-08-v0.5.0-wire-framing-design.md  2026-05-08-v0.6.0-observability-design.md  2026-05-08-v0.7.0-asset-registry-design.md  2026-05-08-v0.8.0-sequencer-design.md  2026-05-08-v0.9.0-materials-design.md  2026-05-08-v0.9.1-wire-framing-state-machine-design.md  2026-05-09-cvar-handlers-design.md  2026-05-09-tier2-event-push-design.md
docs/validation/: photo-to-unreal-2026-05-13.md  probe.py
examples/: .mcp.json.example  hello_run_python_file.py  smoke_test.py
scripts/: UnrealClaudeMCP-Editor.psm1  build_desert_scene.py  drift_sweep.py  florence_scene.py  poc_sequencer_keyframe.py  seed_test_project.py
tests/: README.md  conftest.py  test_bridge.py  test_bridge_edge_cases.py  test_drift_sweep.py  test_manifest_sync.py  test_no_personal_leaks.py
